--- a/dhscanner.cabal
+++ b/dhscanner.cabal
@@ -34,31 +34,35 @@ common warnings
     
     ghc-options: -Wall
 
-executable parser
+executable codegen
 
     import: warnings
 
     main-is: Main.hs
 
-    -- Modules included in this executable, other than Main.
-    other-modules:    Ast,
-                      Token,
-                      Location
+    other-modules:
+        Ast,
+        Cfg,
+        Fqn,
+        Token,
+        Bitcode,
+        Location,
+        Callable
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
-    -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.19.0.0,
-                      containers,
-                      aeson,
-                      array,
-                      yesod,
-                      text
+    build-depends:
+        base ^>=4.19.0.0,
+        containers,
+        aeson,
+        array,
+        yesod,
+        text
 
-    -- Directories containing source files.
-    hs-source-dirs: src,
-                    dhscanner.ast/src
+    hs-source-dirs:
+        src,
+        dhscanner.ast/src,
+        dhscanner.bitcode/src
 
-    -- Base language which the package is written in.
     default-language: Haskell2010
