initial skeleton code gen compiling

--- a/dhscanner.cabal
+++ b/dhscanner.cabal
@@ -41,9 +41,10 @@ executable codegen
     main-is: Main.hs
 
     other-modules:
-        Ast,
         Cfg,
         Fqn,
+        Ast,
+        Asts,
         Token,
         Bitcode,
         Location,
