--- a/dhscanner.cabal
+++ b/dhscanner.cabal
@@ -49,7 +49,9 @@ executable codegen
         Bitcode,
         CodeGen,
         Location,
-        Callable
+        Callable,
+        ActualType,
+        SymbolTable
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -60,7 +62,8 @@ executable codegen
         aeson,
         array,
         yesod,
-        text
+        text,
+        mtl
 
     hs-source-dirs:
         src,
