organize generated code in packages 🎁

--- a/dhscanner.cabal
+++ b/dhscanner.cabal
@@ -50,6 +50,7 @@ executable codegen
         CodeGen,
         Location,
         Callable,
+        Packages,
         ActualType,
         SymbolTable
 
