--- a/dhscanner.cabal
+++ b/dhscanner.cabal
@@ -41,24 +41,15 @@ executable codegen
     main-is: Main.hs
 
     other-modules:
-        Cfg,
-        Fqn,
-        Ast,
-        Asts,
-        Token,
-        Bitcode,
         CodeGen,
-        Callable,
-        Location,
         ActualType,
         SymbolTable
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-
     build-depends:
-        base ^>=4.19.0.0,
+        base,
         containers,
+        dhscanner-ast >= 0.1.0.1,
+        dhscanner-bitcode,
         aeson,
         array,
         yesod,
@@ -66,8 +57,6 @@ executable codegen
         mtl
 
     hs-source-dirs:
-        src,
-        dhscanner.ast/src,
-        dhscanner.bitcode/src
+        src
 
     default-language: Haskell2010
