--- a/Dockerfile.rel.aarch64
+++ b/Dockerfile.rel.aarch64
@@ -1,4 +1,6 @@
-FROM haskell:9.4.8
-RUN wget https://github.com/OrenGitHub/dhscanner.codegen/releases/download/v0.0.5/codegen.aarch64
-RUN chmod +x codegen.aarch64
-CMD ["./codegen.aarch64"]
+FROM ubuntu
+RUN apt-get update -y
+RUN apt-get install wget -y
+RUN wget https://github.com/OrenGitHub/dhscanner/releases/download/v0.0.1/codegen.elf.aarch64
+RUN chmod +x codegen.elf.aarch64
+CMD ["./codegen.elf.aarch64"]
