--- a/dhscanner.cabal
+++ b/dhscanner.cabal
@@ -59,4 +59,6 @@ executable codegen
     hs-source-dirs:
         src
 
+    ghc-options: -Wall -threaded -Werror=missing-fields
+
     default-language: Haskell2010
