--- a/dhscanner.cabal
+++ b/dhscanner.cabal
@@ -50,6 +50,15 @@ executable codegen
         containers,
         dhscanner-ast >= 0.1.0.5,
         dhscanner-bitcode >= 0.1.0.3,
+        yesod-core,
+        http-types,
+        fast-logger,
+        bytestring,
+        wai-logger,
+        wai-extra,
+        warp,
+        time,
+        wai,
         aeson,
         array,
         yesod,
