--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
 
   build:
@@ -18,3 +21,38 @@ jobs:
     - uses: actions/checkout@v4
     - name: build docker image
       run: docker build --tag codegen --file Dockerfile .
+    - name: extract generated binary
+      run: |
+        CONTAINER_ID=$(docker create codegen)
+        BINARY_PATH=$(docker run --rm codegen cabal list-bin codegen | tail -n1)
+        docker cp $CONTAINER_ID:$BINARY_PATH ./codegen.elf.x64
+        docker rm $CONTAINER_ID
+    - name: strip binary
+      run: strip codegen.elf.x64
+    - name: embed binary in minimal image
+      run: docker build --tag codegen.rel --file Dockerfile.rel .
+    - name: login to DockerHub
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+    - name: read and bump patch version
+      id: version
+      run: |
+        current=$(cat VERSION)
+        major=$(echo $current | cut -d. -f1)
+        minor=$(echo $current | cut -d. -f2)
+        patch=$(echo $current | cut -d. -f3)
+        new_patch=$((patch + 1))
+        new_version="$major.$minor.$new_patch"
+        echo "new_version=$new_version" >> $GITHUB_OUTPUT
+    - name: tag release image
+      run: docker tag codegen.rel ${{ secrets.DOCKERHUB_USERNAME }}/dhscanner-codegen:${{ steps.version.outputs.new_version }}-x64
+    - name: push image to Dockerhub
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/dhscanner-codegen:${{ steps.version.outputs.new_version }}-x64
+    - name: update VERSION file
+      run: echo "${{ steps.version.outputs.new_version }}" > VERSION
+    - name: commit version bump
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        git add VERSION
+        git commit -m ":arrow_up: Bump version: ${{ steps.version.outputs.new_version }}"
+        git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} HEAD:main
