--- a/dhscanner.cabal
+++ b/dhscanner.cabal
@@ -21,13 +21,13 @@ build-type: Simple
 -- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
 extra-doc-files: CHANGELOG.md
 
-common warnings
+common ghc_options
     
-    ghc-options: -Wall
+    ghc-options: -Wall -O2
 
 executable codegen
 
-    import: warnings
+    import: ghc_options
 
     main-is: Main.hs
 
@@ -39,8 +39,8 @@ executable codegen
     build-depends:
         base,
         containers,
-        dhscanner-ast >= 1.0.9,
-        dhscanner-bitcode >= 1.0.5,
+        dhscanner-ast >= 1.1.0,
+        dhscanner-bitcode >= 1.0.7,
         yesod-core,
         http-types,
         fast-logger,
@@ -59,6 +59,6 @@ executable codegen
     hs-source-dirs:
         src
 
-    ghc-options: -Wall -threaded -Werror=missing-fields
+    ghc-options: -Wall -threaded -Werror=missing-fields -O2
 
     default-language: Haskell2010
